# m2lstr

./: .pylintrc  BUILD.bazel  README.md  WORKSPACE.bazel  setup.cfg
m2lstr/: dfa.py  translation.py  wff.py
py/: WORKSPACE.bazel
py/m2lstr/: BUILD.bazel
py/tests/: BUILD.bazel  examples_test.py  wff_test.py
tests/: translation_test.py  wff_test.py
